Open-MX 1.2.903 aka 1.3-rc3 (June 24th 2010, svn r3060)
=======================================================

Bug fixes:
* Further fix the management of skb destructors by using shared info
  destructor data in recent kernels and reverting to the old code
  in earlier kernels.

Other improvements from previous release:
* Add a new test infrastructure in parallel of the old omx_check.sh
  script.
* Miscellaneous minor fixes all over the place.

Caveats:
* No background progression or retransmission is done if the application
  does not invoke an Open-MX routine explicitly.

Open-MX 1.2.902 aka 1.3-rc2 (June 9th 2010, svn r3022)
======================================================
The skb->cb release.

Bug fixes:
* Fix the management of skb destructors to be compatible with 2.6.33
  Linux kernel and later.

Other improvements from previous release:
* Make omx_check.sh work from the build directory before make install.
* Fix Valgrind requirements during configure.
* Some minor fixes to the build system.
* Clarify thread-safety in the FAQ.

Open-MX 1.2.901 aka 1.3-rc1 (May 20th 2010, svn r2984)
======================================================
The automake release.

Bug fixes:
* Fix checksumming of unexpected self messages.
* Fix build with Linux kernel 2.6.33 and 2.6.34.
* Fix omxoed to generate a consistent mapper id across the fabric.
* Improve the ABI of some internal symbols so that Open MPI generates
  the right unique network id.

Other improvements from previous release:
* Large cleanup of the build system by switching to automake.
* Miscellaneous minor fixes all over the place.
* Fix many warnings with picky compilers.

Open-MX 1.2.1 (February 8th 2010, svn r2888)
============================================

Bug fixes:
* Fix a potential memory corruption of the destination buffer address
  when receiving expected messages.

Other improvements from previous release:
* Cleanup the management of KCC and KARCH for configuring the kernel build.