@@ -18,7 +18,7 @@
 
 /*
  * This file mimics mx__fops.h from Myricom's MX distribution.
- * It is used to build applications on top of Open-MX using the MX ABI.
+ * It is used to build applications on top of Open-MX using the MX internal API.
  */
 
 #ifndef MX__FOPS_H
@@ -30,7 +30,7 @@
 extern "C" {
 #endif
 
-/* Dummy prototypes so that OpenMPI >= 1.3 enables internal symbols at configure */
+/* Prototype needed so that ugly OpenMPI >= 1.3 enables internal symbols at configure */
 extern mx_return_t mx_open_board(int i, mx_endpt_handle_t *handle);
 
 #ifdef __cpluscplus
