@@ -1,3 +1,13 @@
+
+Improvements from previous release:
+* Install more internal MX API compatibility headers so that OpenMPI
+  enables MX internal symbols when configured on top of Open-MX. 
+
+
+Caveats:
+* No background progression or retransmission is done if the application
+  does not invoke an Open-MX routine explicitly.
+
 Open-MX 1.2.903 aka 1.3-rc3 (June 24th 2010, svn r3060)
 =======================================================
 
